[package]
name = "ssd1306-oled-i2c-esp-hal-0_16_0"
version = "0.1.0"
authors = ["Alex K <kleydints@petalmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
display-interface = "0.4.1"
display-interface-i2c = "0.4.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal = "0.2.5"
esp-backtrace = { version = "0.12.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", features = [ "esp32s3" ] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
fugit = "0.3.7"
log = { version = "0.4.21" }
ssd1306 = "0.8.4"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
